--- a/index.html
+++ b/index.html
@@ -312,7 +312,10 @@
 			</tr>
 			<tr>
 				<td><img src="img/sensor.png" style="width:20px"/></td>
-				<td>Sesors installed</td>
+				<td>
+					Sesors installed<br/>
+					<span class="w3-tiny">Mouse over the sensor for details</span>
+				</td>
 			</tr>
 			<tr>
 				<td><img src="img/recycle.png" style="width:20px"/></td>
